--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -6,7 +6,7 @@
 }
 
 window#waybar {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0,0,0,0);
   border-radius: 13px;
   transition-property: background-color;
   transition-duration: .5s;
@@ -52,7 +52,7 @@ button:hover {
 }
 
 #mode {
-  background-color: #64727D;
+  background-color: #6BB0A5;
   box-shadow: inset 0 -3px #ffffff;
 }
 
@@ -98,7 +98,7 @@ button:hover {
 .modules-right,
 .modules-left,
 .modules-center {
-  background-color: @base;
+  background-color: #103548;
   border-radius: 15px;
 }
 
